--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 　　 <p>島根県出雲市斐川町荘原2215-1</p>
 　　 <p>TEL📞0853-72-9502</p>
     <iframe 
-    src="https://maps.app.goo.gl/8xS4x87c6B11JxhcA?g_st=ic"
+    src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13009.580796396598!2d132.83913537432753!3d35.39545356289096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35576aa48053aa4d%3A0xaa9911e760283c43!2z5bGx55Sw5q2v56eR5Yy76Zmi!5e0!3m2!1sja!2sjp!4v1772218483962!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
     width="100%" 
     height="400" 
     style="border:0;" 
